; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_lookup_head_remote.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_lookup_head_remote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*)* @lookup_head_remote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lookup_head_remote(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__, align 4
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = bitcast %struct.TYPE_5__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @lookup_head_remote_key(%struct.TYPE_5__* %6, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %2
  %12 = load i32**, i32*** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @git_remote_lookup(i32** %12, i32* %13, i32 %15)
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %11, %2
  %18 = call i32 @git_buf_dispose(%struct.TYPE_5__* %6)
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @lookup_head_remote_key(%struct.TYPE_5__*, i32*) #2

declare dso_local i32 @git_remote_lookup(i32**, i32*, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
